# RFS-POC

./: .gitignore  README.md  pyproject.toml  pytest.ini
artifacts/: docker-compose.yml
helpers/: __init__.py  docker_helper.py
reports/: .gitkeep
tests/: conftest.py
tests/data_plane/: __init__.py  test_s3_operations.py
tests/management/: __init__.py  test_admin_api.py
