[project]
name = "rustfs-tests"
version = "0.1.0"
description = "Automated test suite for RustFS S3-compatible object storage"
requires-python = ">=3.14"
dependencies = [
    "pytest>=7.0",
    "pytest-html>=4.0",
    "boto3>=1.34",
    "requests>=2.31",
]

[project.optional-dependencies]
gui = ["playwright>=1.40"]
